<resources>
    <string name="app_name">My360</string>
    <string name="current_version_msg">当前版本名:1.0</string>
    <string name="logo_msg">新版杀毒软件，采用更加牛逼的技术，杀毒更全面，是您的手机运行如飞</string>
    <string name="home_logo_title">我的手机卫士</string>
    <string name="settingCenter">设置中心</string>
    <string name="home_logo_image">home_logo_image</string>
    <string name="home_setting_button">home_setting_button</string>
    <string name="autoUpdate">设置自动更新</string>
    <string name="harassmentInterception">设置骚扰拦截</string>
    <string name="attributionStyle">归属地风格设置</string>
    <string name="attribution">归属地显示设置</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="home_setpassword_dialog_title">初始化密码设置</string>
    <string name="home_setpasswor_dialog_inputpassword_hint">请输入密码</string>
    <string name="home_setpasswor_dialog_inputpasswordagain_hint">请再次输入密码</string>
    <string name="extrapassword">密码验证</string>
    <string name="sample_device_admin_description">远程锁屏</string>
    <string name="sample_device_admin">my360</string>
</resources>
