<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- drawableLeft : 在文本的左边设置图片 
         drawablePadding : 设置图片距离文本的距离
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title_background"
        android:drawableStart="@drawable/dialog_title_default_icon"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/home_setpassword_dialog_title"
        android:textColor="#99000000"
        android:textSize="18sp" />
    <!-- ems：设置显示内容的长度 ,需要和wrap_content一起使用，一个字符代表两个字节
         inputType : 输入类型
    -->

    <EditText
        android:id="@+id/homesetpasswrod_et_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/home_setpasswor_dialog_inputpassword_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/homesetpasswrod_et_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/home_setpasswor_dialog_inputpasswordagain_hint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/homesetpasswrod_btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/unit_8dp"
            android:layout_weight="1"
            android:background="@drawable/home_setpassword_dialog_ok"
            android:text="@string/sure"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/homesetpasswrod_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/home_setpassword_dialog_cancel"
            android:text="@string/cancel"
            android:textColor="#000000" />
    </LinearLayout>


</LinearLayout>