<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit_0dp"
        android:layout_weight="1"
        android:background="@drawable/blue_bkg">

        <android.support.constraint.Guideline
            android:id="@+id/home_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.22" />

        <ImageView
            android:id="@+id/home_lv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_logo_image"
            android:scaleType="centerCrop"
            android:src="@drawable/heima"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/home_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_logo_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_logo_title"
            android:textSize="@dimen/unit_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toRightOf="@+id/home_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />


        <TextView
            android:layout_width="@dimen/unit_200dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/logo_msg"
            android:textSize="@dimen/unit_16sp"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toRightOf="@+id/home_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_logo_msg" />

        <ImageButton
            android:id="@+id/home_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/unit_5dp"
            android:layout_marginTop="@dimen/unit_5dp"
            android:background="@drawable/home_setting_bg_selector"
            android:clickable="true"
            android:contentDescription="@string/home_setting_button"
            android:focusable="true"
            android:src="@drawable/setting"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit_1dp"
        android:background="@color/blue_bg" />

    <GridView
        android:id="@+id/home_gridView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit_0dp"
        android:layout_weight="4"
        android:numColumns="2" />
</LinearLayout>